small fix for tooltips

--- a/demos/dropdowns.html
+++ b/demos/dropdowns.html
@@ -366,8 +366,8 @@
                 </form>
             </div>
 
-            <button type="button" data-dropdown="drop-filters-long" data-dropdown-drawer="true">Dropdown with a super long list of options
-                version</button>
+            <button type="button" data-dropdown="drop-filters-long" data-dropdown-drawer="true"  data-dropdown-close="outside">Dropdown with a super long list of options
+                version closing when clicking outside</button>
             <div id="drop-filters-long" class="dropdown-menu mobile-drawer" hidden style="display:flex">
                 <button class="mobile-drawer-close" data-dropdown-close><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                         viewBox="0 0 24 24">
