--- a/demos/tooltips.html
+++ b/demos/tooltips.html
@@ -147,6 +147,15 @@
             </button>
         </div>
 
+        <h3>CSS Anchor</h3>
+
+        <p>You can use css anchors if you want and if supported... but it's a bit limited : only top/bottom, no arrows...</p>
+
+        <button data-tooltip="anchor:true" aria-label="Popover content">Anchor</button>
+        <button data-tooltip="anchor:true, visible:true" aria-label="I'm always visible and positioned using css anchor if possible">Anchor always visible</button>
+
+        <p style="margin-bottom:50vh">This will flip automatically</p>
+
         <hr>
 
         <button data-tooltip data-tooltip-click title="In a button">
